--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hlh-training",
+  "name": "vue",
   "version": "1.0.0",
-  "description": "模版",
+  "description": "app",
   "author": "lizhezhe <lizhezhe@xinshiyun.com>",
   "private": true,
   "scripts": {
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+	"stylus": "^0.54.5",
+    "vue-resource": "^1.3.4",
+    "better-scroll": "^0.1.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -27,6 +30,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "stylus-loader": "^2.1.1",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eslint-friendly-formatter": "^3.0.0",
