--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "better-scroll": "^0.1.15",
+    "stylus": "^0.54.5",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0",
-	"stylus": "^0.54.5",
     "vue-resource": "^1.3.4",
-    "better-scroll": "^0.1.15"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
